Fixed bug with close icon visible on large devices

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -298,6 +298,10 @@ header {
 	&.move-left {
 		right: 2%;
 	}
+
+	@include MQ(M) {
+		display: none;
+	}
 }
 
 .cd-faq-group {
